--- a/runs/detect/train/args.yaml
+++ b/runs/detect/train/args.yaml
@@ -1,8 +1,8 @@
 task: detect
 mode: train
 model: yolo11n.yaml
-data: config.yaml
-epochs: 1
+data: /content/drive/MyDrive/CPS843Project/config.yaml
+epochs: 100
 time: null
 patience: 100
 batch: 16
@@ -10,7 +10,7 @@ imgsz: 640
 save: true
 save_period: -1
 cache: false
-device: null
+device: 0
 workers: 8
 project: null
 name: train
@@ -104,4 +104,4 @@ erasing: 0.4
 crop_fraction: 1.0
 cfg: null
 tracker: botsort.yaml
-save_dir: runs\detect\train
+save_dir: runs/detect/train
